crates/mpl-hir/tests/snapshots/diagnostics__keeps_backticks_required_by_identifier_syntax.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
expression: "snapshot(\"prod:requests | where `http.status` == 500\",)"
---
INPUT:

prod:requests | where `http.status` == 500

DIAGNOSTICS:

No diagnostics.
