crates/mpl-hir/tests/snapshots/diagnostics__known_functions_and_builtin_interval_are_accepted.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
expression: "snapshot(r#\"set custom_unit = \"ms\";\ndataset:metric\n  | map fill::const(0)\n  | align to $__interval using avg\n  | bucket by host using histogram\n\"#,)"
---
INPUT:

set custom_unit = "ms";
dataset:metric
  | map fill::const(0)
  | map filter::gt(150)
  | map is::ge(0.95)
  | align to $__interval using avg
  | bucket by host using histogram

DIAGNOSTICS:

No diagnostics.
