crates/mpl-hir/tests/snapshots/diagnostics__public_example_constructs_are_accepted.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
assertion_line: 180
expression: "snapshot(r#\"param $dataset: Dataset;\nparam $duration: Duration;\nparam $tag: Option<string>;\nset no_arg;\nset string_arg = \"Hello, World!\";\n\n$dataset:metric\n| ifdef($tag) { where __tag == $tag } else { where __tag == \"default\" }\n| sample\n| where i1 == inf and i2 == -inf and i3 == +inf\n| align to $duration over 7d using avg\n\"#,)"
---
INPUT:

param $dataset: Dataset;
param $duration: Duration;
param $tag: Option<string>;
set no_arg;
set string_arg = "Hello, World!";

$dataset:metric
| ifdef($tag) { where __tag == $tag } else { where __tag == "default" }
| sample
| where i1 == inf and i2 == -inf and i3 == +inf
| align to $duration over 7d using avg

DIAGNOSTICS:

No diagnostics.
