crates/mpl-hir/tests/snapshots/diagnostics__real_indented_sample_is_clean.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
expression: "snapshot(r#\"test:http_requests_total\n  | where status == 500\n  | align to 5m using avg\n\"#,)"
---
INPUT:

test:http_requests_total
  | where status == 500
  | align to 5m using avg

DIAGNOSTICS:

No diagnostics.
