crates/mpl-hir/tests/snapshots/diagnostics__real_indented_sample_only_reports_filter_hint.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
expression: "snapshot(r#\"test:http_requests_total\n  | filter status == 500\n  | align to 5m using avg\n\"#,)"
---
INPUT:

test:http_requests_total
  | filter status == 500
  | align to 5m using avg

DIAGNOSTICS:

1. Hint: `filter` is deprecated; use `where`

REPORTS:

REPORT 1:

  `filter` is deprecated; use `where`
   ╭─[2:3]
 1 │ test:http_requests_total
 2 │   | filter status == 500
   ·   ───────────┬──────────
   ·              ╰── `filter` is deprecated; use `where`
 3 │   | align to 5m using avg
   ╰────
