crates/mpl-hir/tests/snapshots/diagnostics__rejects_replace_without_pattern_like_mplc.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
expression: "snapshot(\"test:requests | replace service = pod ~\")"
---
INPUT:

test:requests | replace service = pod ~

DIAGNOSTICS:

1. Error: MPL syntax error: unexpected token or operation

REPORTS:

REPORT 1:

  × MPL syntax error: unexpected token or operation
   ╭────
 1 │ test:requests | replace service = pod ~
   ╰────
